fix: bug fixed on mobile search

--- a/assets/css/base_style/header.css
+++ b/assets/css/base_style/header.css
@@ -376,7 +376,7 @@ nav {
     }
 
     .side-menu-mobile .mobile-search .mobile_search_result_append a img {
-        width: 20px;
+        width: 35px;
         margin-right: .5em;
     }
 
